--- a/calculator.html
+++ b/calculator.html
@@ -5,13 +5,16 @@ function cube() {
 var num = document.getElementById("n1");
 num.value = Math.pow(num.value, 3);
 }
+function potencia() {
+var num = document.getElementById("n1");
+num.value = Math.pow(num.value, 4);
+}
 </script>
 </head>
 <body>
-	<h1>Calculadora de Diego Casas</h1>
-
 Number:
 <input type="text" id="n1"><p>
 <button onclick="cube()"> x^3 </button>
+<button onclick="potencia()"> x^4 </button>
 </body>
 </html>
